<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtAuthor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtCopyright"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtVersion"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imgAppIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"  
        android:layout_gravity="center"
        android:background="@drawable/ic_app"
        android:contentDescription="@string/content_description" />
</LinearLayout>